src/app.css
/* app.css */

@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&family=Ultra&display=swap');
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");

:root {
	color: #ffffff;
	background-color: #242424;

	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-text-size-adjust: 100%;
}

body {
	margin: 0;
	padding: 0;

	height: 100vh;

	background-position: center center;
	background-attachment: fixed;
	background-repeat: no-repeat;
	background-size: cover;
}

@media (prefers-color-scheme: dark) {
	body {
		background-color: #24242492;
		background-blend-mode: darken;
	}
}


body > div {
	height: 100%;
	display: grid;
}

